--- a/Client/Input Logger/Input Logger/Input Logger.vcxproj
+++ b/Client/Input Logger/Input Logger/Input Logger.vcxproj
@@ -139,12 +139,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Client.h" />
     <ClInclude Include="KeyLogger.h" />
     <ClInclude Include="MouseLogger.h" />
+    <ClInclude Include="WSAInitializer.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Client.cpp" />
     <ClCompile Include="KeyLogger.cpp" />
     <ClCompile Include="MouseLogger.cpp" />
+    <ClCompile Include="Source.cpp" />
+    <ClCompile Include="WSAInitializer.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
