--- a/Client/Client/Client.vcxproj.filters
+++ b/Client/Client/Client.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClInclude Include="LoginForm.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="RegistrationForm.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source.cpp">
