--- a/Peer/Peer/Peer.vcxproj.filters
+++ b/Peer/Peer/Peer.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="MouseMessage.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="PeerServer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="WSAInitializer.h">
@@ -72,6 +75,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="MouseMessage.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="PeerServer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
