Fixed a gitignore bug

--- a/Client/Client/Client.vcxproj
+++ b/Client/Client/Client.vcxproj
@@ -124,6 +124,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Global.cpp" />
     <ClCompile Include="Source.cpp" />
     <ClCompile Include="User.cpp" />
   </ItemGroup>
