--- a/Connector/Connector/Connector.vcxproj
+++ b/Connector/Connector/Connector.vcxproj
@@ -142,13 +142,15 @@
     <ClCompile Include="Connector.cpp" />
     <ClCompile Include="Source.cpp" />
     <ClCompile Include="sqlite3.c" />
-    <ClCompile Include="SqliteDataBase.cpp" />
+    <ClCompile Include="SqliteFriendsDataBase.cpp" />
+    <ClCompile Include="SqliteUsersDataBase.cpp" />
     <ClCompile Include="WSAInitializer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Connector.h" />
     <ClInclude Include="sqlite3.h" />
-    <ClInclude Include="SqliteDataBase.h" />
+    <ClInclude Include="SqliteFriendsDataBase.h" />
+    <ClInclude Include="SqliteUsersDataBase.h" />
     <ClInclude Include="WSAInitializer.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
